--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "python.analysis.extraPaths": [
-        "./Art"
-    ]
+    "python.analysis.extraPaths": ["./Art", "./day16_OOP_Coffe_Machine"]
 }
